Profile Page (UI & Program) only logout.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,14 +28,13 @@
     <string name="username_filled">Username must be filled</string>
     <string name="password_failed">Password must at least 5 characters</string>
     <string name="re_pass_failed">Confirm password must be same with password</string>
-    <string name="sign_up_error">Invalid Credential</string>
+    <string name="sign_up_error">Register Error</string>
 
     <!-- Navigation Activity -->
     <string name="home">Home</string>
     <string name="search">Search</string>
     <string name="upload">Upload</string>
     <string name="profile">Profile</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="logout">Logout</string>
 
 </resources>
