--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,5 +45,9 @@
 
     <!-- Edit Profile Activity -->
     <string name="edit_success">Profile Updated!</string>
+    <string name="loading">Loading...</string>
+    <string name="testing_text">Testing Text</string>
+    <string name="djohan_effendy">Djohan Effendy</string>
+    <string name="role_admin">Role Admin</string>
 
 </resources>
