Profile Page (UI & Program) Done, Comic Details Page (UI & Program) Done, NOT DONE YET: Sounding, Upload

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -51,5 +51,8 @@
     <string name="role_admin">Role Admin</string>
     <string name="manage_user">Manage User</string>
     <string name="upload_material">Upload Material</string>
+    <string name="upload_now">Upload Now</string>
+    <string name="sorry_guest_can_t_upload_material">Sorry, guest can\'t upload material</string>
+    <string name="testing_text">Testing Text</string>
 
 </resources>
